<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_card"
    android:overScrollMode="never"
    android:scrollbars="none">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">
        <TextView android:id="@+id/game_skip" style="@style/GameMenuItem" android:text="@string/play_skip" android:visibility="gone" />
        <LinearLayout android:id="@+id/find_tools" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:visibility="gone">
        <TextView android:id="@+id/find_giveup_btn" style="@style/GameMenuItem" android:text="@string/find_giveup" />
        </LinearLayout>
        <LinearLayout android:id="@+id/training_actions" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:visibility="gone">
        <TextView android:id="@+id/training_reveal_word" style="@style/GameMenuItem" android:text="@string/training_reveal_word" />
        <TextView android:id="@+id/training_reveal" style="@style/GameMenuItem" android:text="@string/training_reveal" />
        </LinearLayout>
        <TextView android:id="@+id/game_rules_info" style="@style/GameMenuItem" android:text="@string/game_rules" />
        <TextView android:id="@+id/game_wa" style="@style/GameMenuItem" android:text="@string/share" android:visibility="gone" />
    </LinearLayout>
</ScrollView>
